--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "game-collection",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
+    "concurrently": "^3.5.0",
+    "mongodb": "^2.2.29",
+    "mongoose": "^4.11.0",
     "morgan": "^1.8.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -15,9 +19,8 @@
     "react-scripts": "1.0.7"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "concurrently \"yarn run server\" \"yarn run client\"",
+    "server": "cd src/server && node index.js",
+    "client": "react-scripts start"
   }
 }
