--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "enzyme": "^2.9.1",
+    "jsdom": "^11.2.0",
+    "jsdom-global": "^3.0.2",
+    "react-scripts": "1.0.12",
+    "react-test-renderer": "^15.6.1"
   },
   "scripts": {
     "start": "concurrently \"yarn run server\" \"yarn run client\"",
     "server": "cd server && node index.js",
-    "client": "react-scripts start"
+    "client": "react-scripts start",
+    "test": "react-scripts test"
   }
 }
