--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "concurrently": "^3.5.0",
+    "config": "^1.26.2",
+    "express-session": "^1.15.5",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "mongodb": "^2.2.29",
     "mongoose": "^4.11.0",
     "morgan": "^1.8.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1"
@@ -26,7 +31,7 @@
   },
   "scripts": {
     "start": "concurrently \"yarn run server\" \"yarn run client\"",
-    "server": "cd server && node index.js",
+    "server": "export NODE_ENV=production && cd server && node index.js",
     "client": "react-scripts start",
     "test": "react-scripts test"
   }
