Removed old app and added scaffolding for new app

--- a/package.json
+++ b/package.json
@@ -1,38 +1,46 @@
 {
   "name": "game-collection",
-  "version": "0.1.0",
-  "private": true,
-  "proxy": "http://localhost:4000",
+  "version": "1.0.0",
+  "description": "Client for Game Collection Server",
+  "main": "dist/index.js",
+  "repository": "git@github.com:julianl23/game-collection.git",
+  "author": "Julian Lord <julianl23@gmail.com>",
+  "license": "UNLICENSED",
+  "private": false,
   "dependencies": {
-    "axios": "^0.16.2",
-    "body-parser": "^1.17.2",
-    "classnames": "^2.2.5",
-    "concurrently": "^3.5.0",
-    "config": "^1.26.2",
-    "express-session": "^1.15.5",
-    "lodash": "^4.17.4",
-    "moment": "^2.18.1",
-    "mongodb": "^2.2.29",
-    "mongoose": "^4.11.0",
-    "morgan": "^1.8.2",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.2.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1"
-  },
-  "devDependencies": {
-    "enzyme": "^2.9.1",
-    "jsdom": "^11.2.0",
-    "jsdom-global": "^3.0.2",
-    "react-scripts": "1.0.12",
-    "react-test-renderer": "^15.6.1"
+    "enzyme": "^3.3.0",
+    "prettier": "^1.13.7",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-test-renderer": "^16.4.1",
+    "styled-components": "^3.3.3",
+    "webpack": "^4.14.0"
   },
   "scripts": {
-    "start": "concurrently \"yarn run server\" \"yarn run client\"",
-    "server": "export NODE_ENV=production && cd server && node index.js",
-    "client": "react-scripts start",
-    "test": "react-scripts test"
+    "build": "webpack",
+    "babeltest": "babel ./src/index.js",
+    "lint": "eslint src",
+    "test": "jest",
+    "start": "webpack-serve"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "6",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.2.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react-app": "3",
+    "eslint": "^5.0.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jest": "^21.17.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.10.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.2.0",
+    "webpack-command": "^0.3.1",
+    "webpack-serve": "^1.0.4"
   }
 }
