--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-  "presets": ["env", "react"]
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": ["last 2 versions", "safari >= 7"],
+          "plugins": ["babel-plugin-styled-components"]
+        }
+      }
+    ],
+    "react"
+  ],
+  "plugins": ["transform-object-rest-spread"]
 }
