--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "private": false,
   "dependencies": {
     "enzyme": "^3.3.0",
+    "eslint-plugin-prettier": "^2.6.1",
+    "jest-styled-components": "^5.0.1",
     "prettier": "^1.13.7",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
@@ -22,7 +24,9 @@
     "babeltest": "babel ./src/index.js",
     "lint": "eslint src",
     "test": "jest",
-    "start": "webpack-serve"
+    "start": "webpack-serve",
+    "precommit": "pretty-quick --staged && yarn lint",
+    "prepush": "yarn test"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -30,6 +34,8 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^23.2.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-styled-components": "^1.5.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react-app": "3",
     "eslint": "^5.0.1",
@@ -38,8 +44,12 @@
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.10.0",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^0.14.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^23.2.0",
+    "pretty-quick": "^1.6.0",
     "webpack-command": "^0.3.1",
     "webpack-serve": "^1.0.4"
   }
