Pushing WIP with broken tests

--- a/package.json
+++ b/package.json
@@ -8,13 +8,22 @@
   "license": "UNLICENSED",
   "private": false,
   "dependencies": {
+    "apollo-boost": "^0.1.10",
+    "connect-history-api-fallback": "^1.5.0",
+    "dotenv": "^6.0.0",
     "enzyme": "^3.3.0",
     "eslint-plugin-prettier": "^2.6.1",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "jest-styled-components": "^5.0.1",
+    "koa-connect": "^2.0.1",
     "prettier": "^1.13.7",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-apollo": "^2.1.9",
     "react-dom": "^16.4.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.4.1",
     "styled-components": "^3.3.3",
     "webpack": "^4.14.0"
