--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,25 @@
 {
+  "plugins": [
+    "transform-runtime",
+    "transform-class-properties",
+    "transform-object-rest-spread",
+    "transform-async-to-generator",
+    [
+      "babel-plugin-styled-components",
+      {
+        "fileName": false
+      }
+    ]
+  ],
   "presets": [
     [
       "env",
       {
         "targets": {
-          "browsers": ["last 2 versions", "safari >= 7"],
-          "plugins": ["babel-plugin-styled-components"]
+          "browsers": ["last 2 versions", "safari >= 7"]
         }
       }
     ],
     "react"
-  ],
-  "plugins": ["transform-object-rest-spread"]
+  ]
 }
