--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
     "es6": true,
     "jest/globals": true
   },
-  "extends": "airbnb",
+  "extends": ["airbnb", "plugin:prettier/recommended"],
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -12,7 +13,7 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["react", "jest", "prettier"],
+  "plugins": ["react", "jest", "prettier", "babel"],
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
