--- a/package.json
+++ b/package.json
@@ -9,31 +9,36 @@
   "private": false,
   "dependencies": {
     "apollo-boost": "^0.1.10",
+    "axios": "^0.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "connect-history-api-fallback": "^1.5.0",
     "dotenv": "^6.0.0",
     "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint-plugin-prettier": "^2.6.1",
+    "formik": "^1.0.2",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "jest-styled-components": "^5.0.1",
     "koa-connect": "^2.0.1",
     "prettier": "^1.13.7",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
+    "react": "^16.4.2",
     "react-apollo": "^2.1.9",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-test-renderer": "^16.4.1",
+    "react-test-renderer": "^16.4.2",
     "styled-components": "^3.3.3",
-    "webpack": "^4.14.0"
+    "unfetch": "^3.1.1",
+    "webpack": "^4.14.0",
+    "yup": "^0.26.0"
   },
   "scripts": {
     "build": "webpack",
-    "babeltest": "babel ./src/index.js",
     "lint": "eslint src",
-    "test": "jest",
-    "start": "webpack-serve",
+    "test": "jest --coverage",
+    "start": "webpack-dev-server",
     "precommit": "pretty-quick --staged && yarn lint",
     "prepush": "yarn test"
   },
@@ -41,14 +46,19 @@
     "babel": "^6.23.0",
     "babel-cli": "6",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
     "babel-jest": "^23.2.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-styled-components": "^1.5.1",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "3",
     "eslint": "^5.0.1",
     "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
@@ -59,7 +69,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.2.0",
     "pretty-quick": "^1.6.0",
+    "webpack-cli": "^3.1.0",
     "webpack-command": "^0.3.1",
-    "webpack-serve": "^1.0.4"
+    "webpack-dev-server": "^3.1.5"
   }
 }
