--- a/package.json
+++ b/package.json
@@ -13,23 +13,24 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "connect-history-api-fallback": "^1.5.0",
     "dotenv": "^6.0.0",
-    "enzyme": "^3.3.0",
+    "enzyme": "^3.4.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint-plugin-prettier": "^2.6.1",
     "formik": "^1.0.2",
     "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.2",
     "jest-styled-components": "^5.0.1",
     "koa-connect": "^2.0.1",
     "prettier": "^1.13.7",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-apollo": "^2.1.9",
+    "react-cookie": "^2.2.0",
     "react-dom": "^16.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.4.2",
-    "styled-components": "^3.3.3",
+    "styled-components": "^3.4.2",
+    "styled-tools": "^1.1.0",
     "unfetch": "^3.1.1",
     "webpack": "^4.14.0",
     "yup": "^0.26.0"
