--- a/package.json
+++ b/package.json
@@ -8,29 +8,30 @@
   "license": "UNLICENSED",
   "private": false,
   "dependencies": {
-    "apollo-boost": "^0.1.10",
+    "apollo-boost": "^0.1.15",
+    "apollo-client": "^2.4.1",
     "axios": "^0.18.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "connect-history-api-fallback": "^1.5.0",
     "dotenv": "^6.0.0",
-    "enzyme": "^3.4.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "eslint-plugin-prettier": "^2.6.1",
     "formik": "^1.0.2",
     "graphql": "^0.13.2",
-    "jest-styled-components": "^5.0.1",
+    "graphql-tag": "^2.9.2",
+    "jest-styled-components": "^6.2.0",
     "koa-connect": "^2.0.1",
     "prettier": "^1.13.7",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
-    "react-apollo": "^2.1.9",
+    "react-apollo": "^2.1.11",
     "react-cookie": "^2.2.0",
     "react-dom": "^16.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.4.2",
-    "styled-components": "^3.4.2",
-    "styled-tools": "^1.1.0",
+    "styled-components": "^3.4.5",
+    "styled-tools": "^1.5.1",
     "unfetch": "^3.1.1",
     "webpack": "^4.14.0",
     "yup": "^0.26.0"
@@ -54,16 +55,19 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "3",
-    "eslint": "^5.0.1",
-    "eslint-config-airbnb": "^17.0.0",
+    "babel-runtime": "^6.26.0",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-graphql": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^21.17.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
