--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "formik": "^1.0.2",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
-    "jest-styled-components": "^6.2.0",
+    "jest-styled-components": "^6.2.2",
     "koa-connect": "^2.0.1",
     "prettier": "^1.13.7",
     "prop-types": "^15.6.2",
@@ -30,9 +30,10 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.4.2",
-    "styled-components": "^3.4.5",
-    "styled-tools": "^1.5.1",
+    "styled-components": "^4.0.2",
+    "styled-tools": "^1.5.2",
     "unfetch": "^3.1.1",
+    "waait": "^1.0.2",
     "webpack": "^4.14.0",
     "yup": "^0.26.0"
   },
