--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "eslint-plugin-prettier": "^2.6.1",
-    "formik": "^1.0.2",
+    "formik": "^1.4.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "jest-styled-components": "^6.3.1",
@@ -24,6 +24,7 @@
     "prettier": "^1.13.7",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-apollo": "^2.1.11",
     "react-cookie": "^2.2.0",
     "react-dom": "^16.4.2",
