--- a/package.json
+++ b/package.json
@@ -8,35 +8,35 @@
   "license": "UNLICENSED",
   "private": false,
   "dependencies": {
-    "apollo-boost": "^0.1.15",
-    "apollo-client": "^2.4.1",
+    "apollo-boost": "^0.1.27",
+    "apollo-client": "^2.4.12",
     "axios": "^0.18.0",
     "connect-history-api-fallback": "^1.5.0",
     "dotenv": "^6.0.0",
     "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "eslint-plugin-prettier": "^2.6.1",
-    "formik": "^1.4.1",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.2",
+    "enzyme-adapter-react-16": "^1.9.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "formik": "^1.5.0",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "jest-styled-components": "^6.3.1",
     "koa-connect": "^2.0.1",
-    "prettier": "^1.13.7",
+    "prettier": "^1.16.4",
     "prop-types": "^15.6.2",
-    "react": "^16.4.2",
+    "react": "^16.8.1",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-apollo": "^2.1.11",
-    "react-cookie": "^2.2.0",
-    "react-dom": "^16.4.2",
+    "react-apollo": "^2.4.1",
+    "react-cookie": "^3.0.8",
+    "react-dom": "^16.8.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-test-renderer": "^16.4.2",
+    "react-test-renderer": "^16.8.1",
     "styled-components": "^4.1.3",
-    "styled-tools": "^1.6.0",
-    "unfetch": "^3.1.1",
-    "waait": "^1.0.2",
-    "webpack": "^4.14.0",
-    "yup": "^0.26.0"
+    "styled-tools": "^1.7.1",
+    "unfetch": "^4.0.1",
+    "waait": "^1.0.4",
+    "webpack": "^4.29.3",
+    "yup": "^0.26.10"
   },
   "scripts": {
     "build": "webpack",
@@ -47,37 +47,37 @@
     "prepush": "yarn test"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/plugin-transform-async-to-generator": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.3.1",
     "babel": "^6.23.0",
-    "babel-cli": "6",
+    "babel-cli": "6.26.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-jest": "^23.2.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-styled-components": "^1.5.1",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "3",
-    "babel-runtime": "^6.26.0",
-    "eslint": "^5.5.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.1.0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-styled-components": "^1.10.0",
+    "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-graphql": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.17.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "file-loader": "^1.1.11",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-graphql": "^3.0.3",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.2.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
-    "pretty-quick": "^1.6.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-command": "^0.3.1",
-    "webpack-dev-server": "^3.1.5"
+    "jest": "^24.1.0",
+    "pretty-quick": "^1.10.0",
+    "webpack-cli": "^3.2.3",
+    "webpack-command": "^0.4.2",
+    "webpack-dev-server": "^3.1.14"
   }
 }
