--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
     "build": "webpack",
     "lint": "eslint src",
     "test": "jest --coverage",
-    "start": "webpack-dev-server",
-    "precommit": "pretty-quick --staged && yarn lint",
-    "prepush": "yarn test"
+    "start": "webpack-dev-server"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.0",
@@ -72,12 +70,18 @@
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^0.14.3",
+    "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
     "pretty-quick": "^1.10.0",
     "webpack-cli": "^3.2.3",
     "webpack-command": "^0.4.2",
     "webpack-dev-server": "^3.1.14"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && yarn lint",
+      "pre-push": "yarn test"
+    }
   }
 }
