--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
   "license": "UNLICENSED",
   "private": false,
   "dependencies": {
-    "apollo-boost": "^0.1.27",
-    "apollo-client": "^2.4.12",
+    "@storybook/addon-actions": "^5.0.5",
+    "@storybook/addon-knobs": "^5.0.5",
+    "@storybook/react": "^5.0.5",
+    "apollo-boost": "^0.3.1",
+    "apollo-client": "^2.5.1",
     "axios": "^0.18.0",
     "connect-history-api-fallback": "^1.5.0",
     "dotenv": "^6.0.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react-hooks": "^1.3.0",
     "formik": "^1.5.0",
-    "graphql": "^14.1.1",
+    "graphql": "^14.2.0",
     "graphql-tag": "^2.10.1",
     "jest-styled-components": "^6.3.1",
     "koa-connect": "^2.0.1",
@@ -25,12 +29,13 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-apollo": "^2.4.1",
+    "react-apollo": "^2.5.3",
     "react-cookie": "^3.0.8",
     "react-dom": "^16.8.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.8.1",
+    "storybook-addon-jsx": "^7.1.0",
     "styled-components": "^4.1.3",
     "styled-tools": "^1.7.1",
     "unfetch": "^4.0.1",
@@ -42,23 +47,25 @@
     "build": "webpack",
     "lint": "eslint src",
     "test": "jest --coverage",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "storybook": "start-storybook -p 8081"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/plugin-transform-async-to-generator": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.3.1",
-    "babel": "^6.23.0",
-    "babel-cli": "6.26.0",
+    "@babel/runtime": "^7.4.2",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.1.0",
+    "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-styled-components": "^1.10.0",
+    "babel-runtime": "^6.26.0",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
